src/main/java/fromSQL/simpleSQLParser.java
// Generated from C:/Users/tmstr/IdeaProjects/SQL_to_Java/simpleSQL.g4 by ANTLR 4.13.1
package fromSQL;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class simpleSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONSTRAINT=1, AS=2, LPAREN=3, RPAREN=4, COMMA=5, SEMICOLON=6, INT_TYPE=7, 
		VARCHAR=8, BOOLEAN_TYPE=9, DATE_TYPE=10, DOUBLE_TYPE=11, FLOAT_TYPE=12, 
		TEXT_TYPE=13, ENUM=14, DOMAIN=15, TYPE=16, CREATE=17, TABLE=18, PRIMARY=19, 
		REFERENCES=20, FOREIGN=21, KEY=22, UNIQUE=23, NOT=24, NULL=25, TRUE=26, 
		FALSE=27, DEFAULT=28, CHECK=29, EQUALS=30, NOTEQUAL=31, LESS=32, GREATER=33, 
		LESSEQUAL=34, GREATEREQUAL=35, INTEGER_LITERAL=36, FLOAT_LITERAL=37, STRING_LITERAL=38, 
		IDENTIFIER=39, WS=40;
	public static final int
		RULE_startRule = 0, RULE_statement = 1, RULE_createTableStatement = 2, 
		RULE_tableName = 3, RULE_primaryKeyDefinition = 4, RULE_foreignKeyDefinition = 5, 
		RULE_columnDefinition = 6, RULE_columnName = 7, RULE_columnConstraints = 8, 
		RULE_primaryKeyConstraint = 9, RULE_foreignKeyConstraint = 10, RULE_uniqueConstraint = 11, 
		RULE_notNullConstraint = 12, RULE_defaultConstraint = 13, RULE_defaultValue = 14, 
		RULE_checkConstraint = 15, RULE_expression = 16, RULE_value = 17, RULE_createEnumStatement = 18, 
		RULE_enumName = 19, RULE_enumValue = 20, RULE_createDomainStatement = 21, 
		RULE_domainName = 22, RULE_dataType = 23, RULE_booleanValue = 24, RULE_domainConstraint = 25, 
		RULE_createTypeStatement = 26, RULE_typeName = 27, RULE_fieldDefinition = 28, 
		RULE_varcharType = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"startRule", "statement", "createTableStatement", "tableName", "primaryKeyDefinition", 
			"foreignKeyDefinition", "columnDefinition", "columnName", "columnConstraints", 
			"primaryKeyConstraint", "foreignKeyConstraint", "uniqueConstraint", "notNullConstraint", 
			"defaultConstraint", "defaultValue", "checkConstraint", "expression", 
			"value", "createEnumStatement", "enumName", "enumValue", "createDomainStatement", 
			"domainName", "dataType", "booleanValue", "domainConstraint", "createTypeStatement", 
			"typeName", "fieldDefinition", "varcharType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CONSTRAINT'", "'AS'", "'('", "')'", "','", "';'", null, "'VARCHAR'", 
			"'BOOLEAN'", "'DATE'", "'DOUBLE'", "'FLOAT'", "'TEXT'", "'ENUM'", "'DOMAIN'", 
			"'TYPE'", "'CREATE'", "'TABLE'", "'PRIMARY'", "'REFERENCES'", "'FOREIGN'", 
			"'KEY'", "'UNIQUE'", "'NOT'", "'NULL'", "'TRUE'", "'FALSE'", "'DEFAULT'", 
			"'CHECK'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONSTRAINT", "AS", "LPAREN", "RPAREN", "COMMA", "SEMICOLON", "INT_TYPE", 
			"VARCHAR", "BOOLEAN_TYPE", "DATE_TYPE", "DOUBLE_TYPE", "FLOAT_TYPE", 
			"TEXT_TYPE", "ENUM", "DOMAIN", "TYPE", "CREATE", "TABLE", "PRIMARY", 
			"REFERENCES", "FOREIGN", "KEY", "UNIQUE", "NOT", "NULL", "TRUE", "FALSE", 
			"DEFAULT", "CHECK", "EQUALS", "NOTEQUAL", "LESS", "GREATER", "LESSEQUAL", 
			"GREATEREQUAL", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
			"IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "simpleSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public simpleSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartRuleContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterStartRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitStartRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitStartRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartRuleContext startRule() throws RecognitionException {
		StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_startRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				statement();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CREATE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public CreateEnumStatementContext createEnumStatement() {
			return getRuleContext(CreateEnumStatementContext.class,0);
		}
		public CreateDomainStatementContext createDomainStatement() {
			return getRuleContext(CreateDomainStatementContext.class,0);
		}
		public CreateTypeStatementContext createTypeStatement() {
			return getRuleContext(CreateTypeStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				createTableStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				createEnumStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(67);
				createDomainStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				createTypeStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(simpleSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(simpleSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(simpleSQLParser.LPAREN, 0); }
		public List<ColumnDefinitionContext> columnDefinition() {
			return getRuleContexts(ColumnDefinitionContext.class);
		}
		public ColumnDefinitionContext columnDefinition(int i) {
			return getRuleContext(ColumnDefinitionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(simpleSQLParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(simpleSQLParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(simpleSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(simpleSQLParser.COMMA, i);
		}
		public PrimaryKeyDefinitionContext primaryKeyDefinition() {
			return getRuleContext(PrimaryKeyDefinitionContext.class,0);
		}
		public ForeignKeyDefinitionContext foreignKeyDefinition() {
			return getRuleContext(ForeignKeyDefinitionContext.class,0);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterCreateTableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitCreateTableStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTableStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(CREATE);
			setState(72);
			match(TABLE);
			setState(73);
			tableName();
			setState(74);
			match(LPAREN);
			setState(75);
			columnDefinition();
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					match(COMMA);
					setState(77);
					columnDefinition();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(83);
				match(COMMA);
				setState(84);
				primaryKeyDefinition();
				}
				break;
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(87);
				match(COMMA);
				setState(88);
				foreignKeyDefinition();
				}
			}

			setState(91);
			match(RPAREN);
			setState(92);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(simpleSQLParser.IDENTIFIER, 0); }
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterTableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitTableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryKeyDefinitionContext extends ParserRuleContext {
		public TerminalNode PRIMARY() { return getToken(simpleSQLParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(simpleSQLParser.KEY, 0); }
		public TerminalNode LPAREN() { return getToken(simpleSQLParser.LPAREN, 0); }
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(simpleSQLParser.RPAREN, 0); }
		public TerminalNode CONSTRAINT() { return getToken(simpleSQLParser.CONSTRAINT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(simpleSQLParser.IDENTIFIER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(simpleSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(simpleSQLParser.COMMA, i);
		}
		public PrimaryKeyDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryKeyDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterPrimaryKeyDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitPrimaryKeyDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitPrimaryKeyDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryKeyDefinitionContext primaryKeyDefinition() throws RecognitionException {
		PrimaryKeyDefinitionContext _localctx = new PrimaryKeyDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primaryKeyDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(96);
				match(CONSTRAINT);
				setState(97);
				match(IDENTIFIER);
				}
			}

			setState(100);
			match(PRIMARY);
			setState(101);
			match(KEY);
			setState(102);
			match(LPAREN);
			setState(103);
			columnName();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				columnName();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForeignKeyDefinitionContext extends ParserRuleContext {
		public TerminalNode FOREIGN() { return getToken(simpleSQLParser.FOREIGN, 0); }
		public TerminalNode KEY() { return getToken(simpleSQLParser.KEY, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(simpleSQLParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(simpleSQLParser.LPAREN, i);
		}
		public List<ColumnNameContext> columnName() {
			return getRuleContexts(ColumnNameContext.class);
		}
		public ColumnNameContext columnName(int i) {
			return getRuleContext(ColumnNameContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(simpleSQLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(simpleSQLParser.RPAREN, i);
		}
		public TerminalNode REFERENCES() { return getToken(simpleSQLParser.REFERENCES, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode CONSTRAINT() { return getToken(simpleSQLParser.CONSTRAINT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(simpleSQLParser.IDENTIFIER, 0); }
		public List<TerminalNode> COMMA() { return getTokens(simpleSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(simpleSQLParser.COMMA, i);
		}
		public ForeignKeyDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreignKeyDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterForeignKeyDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitForeignKeyDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitForeignKeyDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForeignKeyDefinitionContext foreignKeyDefinition() throws RecognitionException {
		ForeignKeyDefinitionContext _localctx = new ForeignKeyDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_foreignKeyDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT) {
				{
				setState(113);
				match(CONSTRAINT);
				setState(114);
				match(IDENTIFIER);
				}
			}

			setState(117);
			match(FOREIGN);
			setState(118);
			match(KEY);
			setState(119);
			match(LPAREN);
			setState(120);
			columnName();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(121);
				match(COMMA);
				setState(122);
				columnName();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(RPAREN);
			setState(129);
			match(REFERENCES);
			setState(130);
			tableName();
			setState(131);
			match(LPAREN);
			setState(132);
			columnName();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(133);
				match(COMMA);
				setState(134);
				columnName();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnDefinitionContext extends ParserRuleContext {
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public ColumnConstraintsContext columnConstraints() {
			return getRuleContext(ColumnConstraintsContext.class,0);
		}
		public ColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterColumnDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitColumnDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitColumnDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
		ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_columnDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			columnName();
			setState(143);
			dataType();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 832045056L) != 0)) {
				{
				setState(144);
				columnConstraints();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(simpleSQLParser.IDENTIFIER, 0); }
		public ColumnNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterColumnName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitColumnName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitColumnName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnNameContext columnName() throws RecognitionException {
		ColumnNameContext _localctx = new ColumnNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_columnName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnConstraintsContext extends ParserRuleContext {
		public PrimaryKeyConstraintContext primaryKeyConstraint() {
			return getRuleContext(PrimaryKeyConstraintContext.class,0);
		}
		public ForeignKeyConstraintContext foreignKeyConstraint() {
			return getRuleContext(ForeignKeyConstraintContext.class,0);
		}
		public UniqueConstraintContext uniqueConstraint() {
			return getRuleContext(UniqueConstraintContext.class,0);
		}
		public NotNullConstraintContext notNullConstraint() {
			return getRuleContext(NotNullConstraintContext.class,0);
		}
		public DefaultConstraintContext defaultConstraint() {
			return getRuleContext(DefaultConstraintContext.class,0);
		}
		public CheckConstraintContext checkConstraint() {
			return getRuleContext(CheckConstraintContext.class,0);
		}
		public ColumnConstraintsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnConstraints; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).enterColumnConstraints(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof simpleSQLListener ) ((simpleSQLListener)listener).exitColumnConstraints(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof simpleSQLVisitor ) return ((simpleSQLVisitor<? extends T>)visitor).visitColumnConstraints(this);
			else return visitor.visitChildren(this);
		}
	}
